--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Introduction
       - href: about.qmd
         text: Data draft
+      - href: Shiny.qmd
+        
     
       
 
